--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,15 @@
 <resources>
     <string name="app_name">RaspbiAtHome</string>
-        <string-array name="ips_array">
+    <string name="update">Update</string>
+    <string name="is_connected">is connected?</string>
+    <string-array name="ips_array">
             <item>"192.168.0.43:5000"</item>
             <item>"119.99.54.13:5000"</item>
         </string-array>
+    <string-array name="categories">
+        <item>"Temperature"</item>
+        <item>"Humidity"</item>
+        <item>"Pressure"</item>
+        <item>"Windows"</item>
+    </string-array>
 </resources>
